--- a/FlaskMarket/FlaskMarket/market/templates/base.html
+++ b/FlaskMarket/FlaskMarket/market/templates/base.html
@@ -37,6 +37,20 @@
         </ul>
       </div>
     </nav>
+      {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          {% for category, message in messages %}
+              <div class="alert alert-{{ category }}">
+                  <!-- code below displays the x icon for closing -->
+                  <button type="button" class="m1-2 mb-1 close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button>
+                  {{ message }}
+              </div>
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
+
       {% block content %}
 
       {% endblock %}
