--- a/FlaskMarket/FlaskMarket/market/templates/base.html
+++ b/FlaskMarket/FlaskMarket/market/templates/base.html
@@ -6,6 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
       <title>
           {% block title %}
 
@@ -14,7 +15,7 @@
    </head>
    <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Flask Market</a>
+      <a class="navbar-brand" href="{{ url_for('home_page') }}">Flask Market</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -27,14 +28,33 @@
                 <a class="nav-link" href="{{ url_for('market_page') }}">Market</a>
             </li>
         </ul>
-        <ul class="navbar-nav">
+
+        {% if current_user.is_authenticated %}
+          <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" style="color: lawngreen; font-weight: bold">
+                    <i class="bi bi-coin"></i>
+                    {{ current_user.prettier_budget }}
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link">Welcome, {{ current_user.username }}</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('logout_page') }}">Logout</a>
+            </li>
+          </ul>
+        {% else %}
+          <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('login_page') }}">Login</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('register_page') }}">Register</a>
             </li>
-        </ul>
+          </ul>
+        {% endif %}
+        
       </div>
     </nav>
       {% with messages = get_flashed_messages(with_categories=true) %}
