--- a/FlaskMarket/FlaskMarket/market/templates/market.html
+++ b/FlaskMarket/FlaskMarket/market/templates/market.html
@@ -39,9 +39,30 @@ Market Page
       </table>
    </div>
    <div class="col-4">
-        <h2>Owned Items</h2>
-        <p>Click on sell item to put an item back on the Market</p>
-        <br>
-   </div>
+    <h2>Owned Items</h2>
+    <p>Click on sell item to put an item back on the Market</p>
+    <br>
+    <!-- we use a row here because the Bootstrap grid we are using only allows 12 columns per row, say 8 + 4 like above -->
+    <!-- if we set the column size to 6 for each item card, then the third item card will be automatically bumped to the next row -->
+    <div class="row">
+       {% for owned_item in owned_items %}
+       {% include 'includes/owned_items_modals.html' %}
+         <div class="col-md-6">
+             <div style="margin-bottom: 5px" class="card text-center bg-dark">
+                  <div class="card-body">
+                      <h5 class="card-title">{{ owned_item.name }}</h5>
+                      <button type="button" class="btn btn-outline-danger" style="margin-bottom: 5px"
+                              data-toggle="modal" data-target="#Modal-SellingConfirm-{{ owned_item.id }}">
+                          Sell this Item
+                      </button>
+                      <p class="card-text"><strong>
+                          This item cost ${{ owned_item.price }}
+                      </strong></p>
+                  </div>
+              </div>
+         </div>
+       {% endfor %}
+    </div>
+</div>
 </div>
 {% endblock %}
